; ModuleID = '/home/carl/AnghaBench/torch7/extr_File.c_torch_File_writeString.c'
source_filename = "/home/carl/AnghaBench/torch7/extr_File.c_torch_File_writeString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"torch.File\00", align 1
@LUA_TSTRING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @torch_File_writeString to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @torch_File_writeString(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @luaT_checkudata(i32* %6, i32 1, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i32* %7, i32** %3, align 8
  store i8* null, i8** %4, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* @LUA_TSTRING, align 4
  %10 = call i32 @luaL_checktype(i32* %8, i32 2, i32 %9)
  %11 = load i32*, i32** %2, align 8
  %12 = call i8* @lua_tolstring(i32* %11, i32 2, i64* %5)
  store i8* %12, i8** %4, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @THFile_writeStringRaw(i32* %14, i8* %15, i64 %16)
  %18 = call i32 @lua_pushnumber(i32* %13, i32 %17)
  ret i32 1
}

declare dso_local i32* @luaT_checkudata(i32*, i32, i8*) #1

declare dso_local i32 @luaL_checktype(i32*, i32, i32) #1

declare dso_local i8* @lua_tolstring(i32*, i32, i64*) #1

declare dso_local i32 @lua_pushnumber(i32*, i32) #1

declare dso_local i32 @THFile_writeStringRaw(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
